force-app/main/default/objects/Account/fields/Distance_commerce_parking__c.field-meta.xml
<CustomField>
    <fullName>Distance_commerce_parking__c</fullName>
    <description>en mètre(s)</description>
    <inlineHelpText>en mètre(s)</inlineHelpText>
    <label>Distance commerce-parking</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>