force-app/main/default/objects/Account/fields/Dmax_Approbation__c.field-meta.xml
<CustomField>
    <fullName>Dmax_Approbation__c</fullName>
    <formula>IF(NOT(ISBLANK( Zone_dimplantation__c )),
   IF( 
   DISTANCE( Long_Lat_adresse_de_livraison__c ,  
   Zone_dimplantation__r.Centroide__c , &#39;km&#39;) &lt; Zone_dimplantation__r.Dmax__c, &quot;Oui&quot;, 
&quot;Non&quot;),&quot;Non&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dmax Approbation</label>
    <type>Text</type>
</CustomField>