force-app/main/default/objects/Account/fields/DMax_Respectee__c.field-meta.xml
<CustomField>
    <fullName>DMax_Respectee__c</fullName>
    <formula>IF( AND(not isblank (Zone_dimplantation__c),DISTANCE( Long_Lat_adresse_de_livraison__c ,  Zone_dimplantation__r.Centroide__c , &#39;km&#39;)&lt; Zone_dimplantation__r.Dmax__c), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DMax Respectée</label>
    <type>Text</type>
</CustomField>