force-app/main/default/objects/Account/fields/Documents_publipostage__c.field-meta.xml
<CustomField>
    <fullName>Documents_publipostage__c</fullName>
    <formula>HYPERLINK(&quot;https://&quot;&amp; $Label.Publipostage &amp;&quot;/document/GetDocumentBySiteId/?internationalSiteId=&quot;+Reference_internationale__c, $Label.Click_Here )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documents / publipostage</label>
    <type>Text</type>
</CustomField>