force-app/main/default/objects/Account/fields/DR__c.field-meta.xml
<CustomField>
    <fullName>DR__c</fullName>
    <formula>Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.FirstName &amp; &quot; &quot;&amp; 

Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.LastName &amp; &quot; - &quot; &amp; 

Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.Phone &amp; &quot; - &quot; &amp; 

HYPERLINK(Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.Email, Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.Email, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DR</label>
    <type>Text</type>
</CustomField>