force-app/main/default/objects/Account/fields/Duree_pause_dejeuner_en_h__c.field-meta.xml
<CustomField>
    <fullName>Duree_pause_dejeuner_en_h__c</fullName>
    <label>Durée pause déjeuner (en h)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>