force-app/main/default/objects/Account/fields/Email_du_magasin__c.field-meta.xml
<CustomField>
    <fullName>Email_du_magasin__c</fullName>
    <label>Email du magasin</label>
    <type>Email</type>
</CustomField>