force-app/main/default/objects/Account/fields/employes_formes__c.field-meta.xml
<CustomField>
    <fullName>employes_formes__c</fullName>
    <label>Employés formés</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>