force-app/main/default/objects/Account/fields/En_attente_analyse_DOR__c.field-meta.xml
<CustomField>
    <fullName>En_attente_analyse_DOR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En attente analyse DOR</label>
    <type>Checkbox</type>
</CustomField>