force-app/main/default/objects/Account/fields/En_attente_analyse_GC__c.field-meta.xml
<CustomField>
    <fullName>En_attente_analyse_GC__c</fullName>
    <label>En attente analyse GC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attente de pouvoir</fullName>
            </value>
            <value>
                <fullName>Attente RIB, K-BIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>