force-app/main/default/objects/Account/fields/En_attente_de_courrier__c.field-meta.xml
<CustomField>
    <fullName>En_attente_de_courrier__c</fullName>
    <label>En attente de courrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Résiliation</fullName>
            </value>
            <value>
                <fullName>Exclusion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>