force-app/main/default/objects/Account/fields/Entreprise_nettoyage__c.field-meta.xml
<CustomField>
    <fullName>Entreprise_nettoyage__c</fullName>
    <label>Entreprise nettoyage</label>
    <length>35</length>
    <type>Text</type>
</CustomField>