force-app/main/default/objects/Account/fields/Entreprise_telesurveillance__c.field-meta.xml
<CustomField>
    <fullName>Entreprise_telesurveillance__c</fullName>
    <label>Entreprise télésurveillance</label>
    <length>35</length>
    <type>Text</type>
</CustomField>