force-app/main/default/objects/Account/fields/Envoyer_email_au_responsable_magasin__c.field-meta.xml
<CustomField>
    <fullName>Envoyer_email_au_responsable_magasin__c</fullName>
    <formula>HYPERLINK(&quot;/apex/VFP08_GenerateLien_RM?id=&quot;+ Id +&quot;&amp;isdtp=nv&quot;, $Label.Click_Here, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Envoyer email au responsable magasin</label>
    <type>Text</type>
</CustomField>