force-app/main/default/objects/Account/fields/Envoyer_message_PDA__c.field-meta.xml
<CustomField>
    <fullName>Envoyer_message_PDA__c</fullName>
    <formula>HYPERLINK(&quot;http://&quot;&amp;$Label.Envoyer_un_message_PDA&amp;&quot;.pickup.fr/Message/Send?pudoId=&quot;+Reference_internationale__c+&quot;&amp;language=fr-FR&quot;, $Label.Click_Here )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Envoyer un message PDA</label>
    <type>Text</type>
</CustomField>