force-app/main/default/objects/Account/fields/Equipe_alarme__c.field-meta.xml
<CustomField>
    <fullName>Equipe_alarme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipé d&#39;une alarme</label>
    <type>Checkbox</type>
</CustomField>