force-app/main/default/objects/Account/fields/Equipements_PMR__c.field-meta.xml
<CustomField>
    <fullName>Equipements_PMR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipements PMR</label>
    <type>Checkbox</type>
</CustomField>