force-app/main/default/objects/Account/fields/ESD__c.field-meta.xml
<CustomField>
    <fullName>ESD__c</fullName>
    <formula>HYPERLINK(&quot;http://&quot;&amp;$Label.ESD&amp;&quot;.pickup.fr/CollectionRequest/&quot;+Reference_internationale__c, $Label.Click_Here )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ESD</label>
    <type>Text</type>
</CustomField>