force-app/main/default/objects/Account/fields/ESD_FDA__c.field-meta.xml
<CustomField>
    <fullName>ESD_FDA__c</fullName>
    <formula>HYPERLINK(&quot;http://www.chronopost.fr/fr&quot;, $Label.Click_Here )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ESD FDA</label>
    <type>Text</type>
</CustomField>