force-app/main/default/objects/Account/fields/Etat_anterieur__c.field-meta.xml
<CustomField>
    <fullName>Etat_anterieur__c</fullName>
    <label>Etat antérieur</label>
    <length>30</length>
    <type>Text</type>
</CustomField>