force-app/main/default/objects/Account/fields/Fleet_Manager__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Manager__c</fullName>
    <description>Commander un matériel/ consultation</description>
    <formula>HYPERLINK($Label.Fleet_Manager+Reference_internationale__c+&quot;&amp;language=fr-FR&quot;, $Label.Click_Here )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fleet Manager</label>
    <type>Text</type>
</CustomField>