force-app/main/default/objects/Account/fields/Formation_realisee__c.field-meta.xml
<CustomField>
    <fullName>Formation_realisee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formation réalisée</label>
    <type>Checkbox</type>
</CustomField>