force-app/main/default/objects/Account/fields/Formation_requise__c.field-meta.xml
<CustomField>
    <fullName>Formation_requise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formation requise</label>
    <type>Checkbox</type>
</CustomField>