force-app/main/default/objects/Account/fields/Gestionnaire_du_parc__c.field-meta.xml
<CustomField>
    <fullName>Gestionnaire_du_parc__c</fullName>
    <label>Gestionnaire du parc</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DEBUREN</fullName>
            </value>
            <value>
                <fullName>KERN</fullName>
            </value>
            <value>
                <fullName>PACKCITY</fullName>
                <default>true</default>
                <label>PACKCITY</label>
            </value>
            <value>
                <fullName>SAZKA</fullName>
            </value>
            <value>
                <fullName>ULOŽENKA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>