force-app/main/default/objects/Account/fields/Grille_tarifaire__c.field-meta.xml
<CustomField>
    <fullName>Grille_tarifaire__c</fullName>
    <label>Grille tarifaire</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GTCONTACT</fullName>
            </value>
            <value>
                <fullName>GTV100316</fullName>
            </value>
            <value>
                <fullName>GT2012</fullName>
            </value>
            <value>
                <fullName>GT2016</fullName>
            </value>
            <value>
                <fullName>GTPSMREM</fullName>
            </value>
            <value>
                <fullName>GTAVIA</fullName>
            </value>
            <value>
                <fullName>GTSTORE</fullName>
            </value>
            <value>
                <fullName>GTCASINO</fullName>
            </value>
            <value>
                <fullName>GTPSMSANSREM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>