force-app/main/default/objects/Account/fields/Hauteur_cm__c.field-meta.xml
<CustomField>
    <fullName>Hauteur_cm__c</fullName>
    <label>Hauteur (cm)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>