force-app/main/default/objects/Account/fields/Heure_d_ouverture_minimale_en_h__c.field-meta.xml
<CustomField>
    <fullName>Heure_d_ouverture_minimale_en_h__c</fullName>
    <label>Heure d&#39;ouverture minimale (en h)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <default>true</default>
                <label>10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>