force-app/main/default/objects/Account/fields/Heure_de_fermeture_minimale_en_h__c.field-meta.xml
<CustomField>
    <fullName>Heure_de_fermeture_minimale_en_h__c</fullName>
    <label>Heure de fermeture minimale (en h)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>