force-app/main/default/objects/Account/fields/Heure_ouverture_matinee__c.field-meta.xml
<CustomField>
    <fullName>Heure_ouverture_matinee__c</fullName>
    <formula>IF( 
AND( 
 
VALUE(LEFT(TEXT(Lundi_Ouverture__c), 2))&lt;12, 
VALUE(LEFT(TEXT(Mardi_Ouverture__c), 2))&lt;12, 
VALUE(LEFT(TEXT(Mercredi_Ouverture__c), 2))&lt;12, 
VALUE(LEFT(TEXT(Jeudi_Ouverture__c), 2))&lt;12, 
VALUE(LEFT(TEXT(Vendredi_Ouverture__c), 2))&lt;12, 
VALUE(LEFT(TEXT(Samedi_Ouverture__c), 2))&lt;12), 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;), 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heure ouverture matinée</label>
    <type>Text</type>
</CustomField>