force-app/main/default/objects/Account/fields/Horaire_Fermeture_Reference__c.field-meta.xml
<CustomField>
    <fullName>Horaire_Fermeture_Reference__c</fullName>
    <label>Horaire de fermeture de référence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_HOR</valueSetName>
    </valueSet>
</CustomField>