force-app/main/default/objects/Account/fields/Horaire_Ouverture_Reference__c.field-meta.xml
<CustomField>
    <fullName>Horaire_Ouverture_Reference__c</fullName>
    <label>Horaire d&#39;ouverture de référence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_HOR</valueSetName>
    </valueSet>
</CustomField>