force-app/main/default/objects/Account/fields/Identifiant_android_du_Pudo__c.field-meta.xml
<CustomField>
    <fullName>Identifiant_android_du_Pudo__c</fullName>
    <formula>IF(
!AND(INCLUDES(Type_de_device__c, &quot;PDA Windows&quot;), Type_de_device_Selected__c = 1),
Reference_internationale__c+&#39;@pickup.com&#39;&amp; 
  IF
  (
    $Organization.Id = $Label.ID_ORG, $Label.Org_ext,&#39;&#39;
  )
  ,&#39;&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identifiant androïd du Pudo</label>
    <type>Text</type>
</CustomField>