force-app/main/default/objects/Account/fields/IdPickup__c.field-meta.xml
<CustomField>
    <fullName>IdPickup__c</fullName>
    <externalId>true</externalId>
    <label>Id Pickup</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>