force-app/main/default/objects/Account/fields/Information_agences__c.field-meta.xml
<CustomField>
    <fullName>Information_agences__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Information agences</label>
    <type>Checkbox</type>
</CustomField>