force-app/main/default/objects/Account/fields/Injoignabilite_en_cours_TECH__c.field-meta.xml
<CustomField>
    <fullName>Injoignabilite_en_cours_TECH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicateur pour filtre vues de listes 21 (Injoignable - En attente d&#39;attribution standard) et 22 (Injoignable - En attente d&#39;attribution partenaire)</description>
    <label>Injoignabilité en cours TECH</label>
    <type>Checkbox</type>
</CustomField>