force-app/main/default/objects/Account/fields/Integre__c.field-meta.xml
<CustomField>
    <fullName>Integre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intégré</label>
    <type>Checkbox</type>
</CustomField>