force-app/main/default/objects/Account/fields/Inventaire__c.field-meta.xml
<CustomField>
    <fullName>Inventaire__c</fullName>
    <description>Permet à l’équipe exploitation d’indiquer si l’inventaire nécessaire à la désinstallation d’une consigne a bien été réalisé.</description>
    <label>Inventaire</label>
    <type>Date</type>
</CustomField>