force-app/main/default/objects/Account/fields/isOrangePartenaire__c.field-meta.xml
<CustomField>
    <fullName>isOrangePartenaire__c</fullName>
    <description>Ce champ est utilisé pour saisir la valeur des MP des pudo orange dans le code (pour gérer les associations)</description>
    <formula>IF(
 AND (
  text( Partenaire__c ) == &#39;4&#39;,
  text (Type) == &#39;3&#39;
 )
 ,
 true
 ,
 false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isOrangePartenaire</label>
    <type>Checkbox</type>
</CustomField>