force-app/main/default/objects/Account/fields/Jeudi_ferme__c.field-meta.xml
<CustomField>
    <fullName>Jeudi_ferme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeudi fermé</label>
    <type>Checkbox</type>
</CustomField>