force-app/main/default/objects/Account/fields/jeudi_fin_pause_dejeuner__c.field-meta.xml
<CustomField>
    <fullName>jeudi_fin_pause_dejeuner__c</fullName>
    <label>Fin pause déjeuner</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Jeudi_ferme__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_HOR</valueSetName>
    </valueSet>
</CustomField>