force-app/main/default/objects/Account/fields/Jeudi_Ouverture__c.field-meta.xml
<CustomField>
    <fullName>Jeudi_Ouverture__c</fullName>
    <label>Ouverture</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Jeudi_ferme__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_HOR</valueSetName>
    </valueSet>
</CustomField>