force-app/main/default/objects/Account/fields/Key_account__c.field-meta.xml
<CustomField>
    <fullName>Key_account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key account</label>
    <type>Checkbox</type>
</CustomField>