force-app/main/default/objects/Account/fields/Langues_parlees_sur_le_relais__c.field-meta.xml
<CustomField>
    <fullName>Langues_parlees_sur_le_relais__c</fullName>
    <label>Langues parlées sur le relais</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_LAN</valueSetName>
    </valueSet>
</CustomField>