force-app/main/default/objects/Account/fields/Largeur_cm__c.field-meta.xml
<CustomField>
    <fullName>Largeur_cm__c</fullName>
    <label>Largeur (cm)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>