force-app/main/default/objects/Account/fields/Login_user_machine__c.field-meta.xml
<CustomField>
    <fullName>Login_user_machine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Login user machine</label>
    <type>Checkbox</type>
</CustomField>