force-app/main/default/objects/Account/fields/Long_Lat_adresse_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Long_Lat_adresse_de_livraison__c</fullName>
    <label>Lat/Long (adresse de livraison)</label>
    <scale>14</scale>
    <type>Location</type>
</CustomField>