force-app/main/default/objects/Account/fields/Lundi__c.field-meta.xml
<CustomField>
    <fullName>Lundi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lundi</label>
    <type>Checkbox</type>
</CustomField>